--- a/djangobackend/baseauth/templates/registration/logged_out.html
+++ b/djangobackend/baseauth/templates/registration/logged_out.html
@@ -1,4 +1,13 @@
-{% extends "registration/logged_out.html" %}
+{% extends "admin/base_site.html" %}
+{% load i18n %}
 
-{% block header %}{% endblock %}
+{% block header %}{% endblock header %}
 {% block breadcrumbs %}{% endblock %}
+
+{% block content %}
+
+<p>{% trans "Thanks for spending some quality time with the Web site today." %}</p>
+
+<p><a href="{% url 'login' %}">{% trans 'Log in again' %}</a></p>
+
+{% endblock %}
