--- a/djangobackend/templates/base.html
+++ b/djangobackend/templates/base.html
@@ -31,9 +31,9 @@ sadsad
   window.static_url = "{% static '' %}";
 </script>
 {% block react_bundle %}
-{% render_bundle 'runtime~main' 'js' %}
-{% render_bundle 'undefined' %}
 {% render_bundle 'main' %}
+{% render_bundle 'vendor' %}
+{% render_bundle 'runtime~main' 'js' %}
 {% endblock %}
 </body>
 </html>
