--- a/djangobackend/templates/base.html
+++ b/djangobackend/templates/base.html
@@ -31,9 +31,7 @@ sadsad
   window.static_url = "{% static '' %}";
 </script>
 {% block react_bundle %}
-{% render_bundle 'main' %}
-{% render_bundle 'vendor' %}
-{% render_bundle 'runtime~main' 'js' %}
+  {% include 'bundle.html' with name="main" %}
 {% endblock %}
 </body>
 </html>
